--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="navHover navHide">
-                        <a href="#">Blog</a>
+                        <a href="#blog">Blog</a>
                     </li>
                     <li class="navHover navHide">
                         <a href="./contact.html">Contact</a>
@@ -314,13 +314,13 @@
                 <nav class="division">
                     <ul class="flexColumn">
                         <li>
-                            <a href="#">About us</a>
+                            <a href="#about">About us</a>
                         </li>
                         <li>
-                            <a href="#">Our product</a>
+                            <a href="#shop">Our product</a>
                         </li>
                         <li>
-                            <a href="#">Our blog</a>
+                            <a href="#blog">Our blog</a>
                         </li>
                         <li>
                             <a href="./contact.html">Contact us</a>
