linked links and fix top nav bug

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- beginning of header section -->
-    <header class="headerContact">
+    <header class="contactHeader">
         <nav class="flexRow">
             <div class="wrapper flexRow">
                 <a href="#">
@@ -131,16 +131,16 @@
                 <nav class="division">
                     <ul class="flexColumn">
                         <li>
-                            <a href="#">About us</a>
+                            <a href="./index.html">About us</a>
                         </li>
                         <li>
-                            <a href="#">Our product</a>
+                            <a href="./index.html">Our product</a>
                         </li>
                         <li>
-                            <a href="#">Our blog</a>
+                            <a href="./index.html">Our blog</a>
                         </li>
                         <li>
-                            <a href="#">Contact us</a>
+                            <a href="./contact.html">Contact us</a>
                         </li>
                         <li>
                             <a href="#">Become a member</a>
@@ -187,7 +187,6 @@
                 <h3>Subscribe</h3>
                 <div class="division">
                     <h4>Address:</h4>
-                    <!-- comma in this address suggests <br> should be applied. -->
                     <p>5919 Trussville Crossings Pkwy, <br> Birmingham AL 35235</p>
                     <h4>Phone:</h4>
                     <p>+88016888005654</p>
