linked external sections

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                         <a href="./index.html">Home</a>
                     </li>
                     <li class="navHover navHide">
-                        <a href="#">Blog</a>
+                        <a href="./index.html#blog">Blog</a>
                     </li>
                     <li class="navHover navHide">
                         <a href="./contact.html">Contact</a>
@@ -131,13 +131,13 @@
                 <nav class="division">
                     <ul class="flexColumn">
                         <li>
-                            <a href="./index.html">About us</a>
+                            <a href="./index.html#about">About us</a>
                         </li>
                         <li>
-                            <a href="./index.html">Our product</a>
+                            <a href="./index.html#shop">Our product</a>
                         </li>
                         <li>
-                            <a href="./index.html">Our blog</a>
+                            <a href="./index.html#blog">Our blog</a>
                         </li>
                         <li>
                             <a href="./contact.html">Contact us</a>
