removed parallax from shop section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- end of about section -->
 
         <!-- beginning of product section -->
-        <section id="shop" class="shop parallax">
+        <section id="shop" class="shop">
             <div class="wrapper">
                 <div class="sectionHeading">
                     <h2>Our products</h2>
