updated nav bar classes for active pages and linked logos to home page

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <header class="contactHeader">
         <nav class="flexRow">
             <div class="wrapper flexRow">
-                <a href="#">
+                <a href="./index.html">
                     <img src="./assets/logo.png" alt="Oreg logo">
                 </a>
                 <ul class="flexRow">
@@ -27,7 +27,7 @@
                         <a href="./index.html#blog">Blog</a>
                     </li>
                     <li class="navHover navHide">
-                        <a href="./contact.html">Contact</a>
+                        <a class="active" href="./contact.html">Contact</a>
                     </li>
                     <li>
                         <img class="svg" src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
