--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <header>
         <nav class="flexRow">
             <div class="wrapper flexRow">
-                <a href="#">
+                <a href="./index.html">
                     <img src="./assets/logo.png" alt="Oreg logo">
                 </a>
                 <ul class="flexRow">
                     <li class="navHover navHide">
-                        <a href="./index.html">Home</a>
+                        <a class="active" href="./index.html">Home</a>
                     </li>
                     <li class="navHover navHide">
                         <a href="#blog">Blog</a>
