--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="flexRow">
             <div class="wrapper flexRow">
                 <a href="./index.html">
-                    <img src="./assets/logo.png" alt="Oreg logo">
+                    <img src="./assets/logo-white.png" alt="Oreg logo">
                 </a>
                 <ul class="flexRow">
                     <li class="navHover navHide">
