added logo class and alt text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="flexRow">
             <div class="wrapper flexRow">
                 <a href="./index.html">
-                    <img src="./assets/logo-white.png" alt="Oreg logo">
+                    <img class="logo" src="./assets/logo-white.png" alt="Oreg logo.">
                 </a>
                 <ul class="flexRow">
                     <li class="navHover navHide">
@@ -73,7 +73,7 @@
         <!-- end of about section -->
 
         <!-- beginning of product section -->
-        <section id="shop" class="shop">
+        <section id="shop" class="shop parallax">
             <div class="wrapper">
                 <div class="sectionHeading">
                     <h2>Our products</h2>
@@ -279,7 +279,7 @@
         <div class="wrapper flexRow">
             <div class="footerCol first">
                 <div class="imageContainer">
-                    <img src="./assets/logo-white.png" alt="Oreg logo.">
+                    <img class="logo" src="./assets/logo-white.png" alt="Oreg logo.">
                 </div>
                 <div class="division">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum amet a non sapiente perspiciatis. Dignissimos amet quidem modi sapiente!</p>
