updated about section classes

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         <!-- beginning of about section -->
         <section id="about" class="about">
             <div class="wrapper flexRow">
-                <div class="textContainer aboutText">
+                <div class="aboutText">
                     <h2>About us</h2>
                     <h3>Providing Best Organic Products.</h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Natus porro eveniet sit tempora? Minus sunt quidem libero, reprehenderit vel illo commodi laborum tenetur error deleniti perferendis ipsum, quo autem atque!</p>
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora, modi fuga laudantium adipisci incidunt voluptate consequatur eveniet minus voluptatibus id?</p>
                     <button class="btnVar2">Shop Now</button>
                 </div>
-                <div class="textContainer">
+                <div class="factContainer">
                     <p class="aboutFact">We've been providing the best services for 20 years.</p>
                 </div>
             </div>
