removed unneccessary classes and updated alt text

--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
             </div>
         </div>
         <div class="footerImage">
-            <img src="./assets/cow.png" alt="cows in a field">
+            <img src="./assets/cow.png" alt="Cows on a field.">
         </div>
         <p class="copyright">Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
     </footer>
