--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <button class="btnVar2">Shop Now</button>
                 </div>
                 <div class="imageContainer">
-                    <img class="animate" src="./assets/header/header.png" alt="Fresh organic papaya stuffed with berries on a plate.">
+                    <img src="./assets/header/header.png" alt="Fresh organic papaya stuffed with berries on a plate.">
                 </div>                
             </div>
         </div>
@@ -196,7 +196,7 @@
                             <img src="./assets/gallery1.jpg" alt="Organic red apple in the palm of a hand.">
                         </li>
                         <li>
-                            <img src="./assets/gallery2.jpg" alt="Cross section of a rustic sandwich with deli meat and cheese.">
+                            <img src="./assets/gallery2.jpg" alt="Rustic sandwich with deli meat and cheese.">
                         </li>
                         <li>
                             <img src="./assets/gallery3.jpg" alt="Grocery haul of assorted organic fruits, veggies and flowers on a table. ">
@@ -204,7 +204,7 @@
                     </ul>
                     <ul class="row2 flexRow">
                         <li>
-                            <img src="./assets/gallery4.jpg" alt="Man on a farm hollding a basket of freshly picked assorted organic vegetables.">
+                            <img src="./assets/gallery4.jpg" alt="Man on a farm holding a basket of freshly picked assorted organic vegetables.">
                         </li>
                         <li>
                             <img src="./assets/gallery5.jpg" alt="Organic brown eggs in a bowl and on the table.">
@@ -382,7 +382,7 @@
             </div>
         </div>
         <div class="footerImage">
-            <img src="./assets/cow.png" alt="cows in a field">
+            <img src="./assets/cow.png" alt="Cows on a field.">
         </div>
         <p class="copyright">Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
     </footer>
