--- a/contact.html
+++ b/contact.html
@@ -203,5 +203,6 @@
         <p class="copyright">Coded by <a href="#">Erika David</a>. Copyright &#169 <a href="https://www.junocollege.com" target="_blank">Juno College</a>. All rights reserved.</p>
     </footer>
     <!-- end of footer section -->
+    <script src="./script.js"></script>
 </body>
 </html>
