removed FA icon and created hamburger menu from scratch

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                         <img class="svg" src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
                     </li>
                 </ul>
-                <a class="hamburgerContainer" href="#">
-                    <i class="fa-solid fa-bars hamburger"></i>
-                </a>
+                <button class="hamburger">
+                    <div class="bar"></div>
+                </button>
             </div>
         </nav>
         <div class="hero parallax flexRow">
