added mobile nav element

--- a/contact.html
+++ b/contact.html
@@ -37,6 +37,19 @@
                 </button>
             </div>
         </nav>
+        <nav class="mobileNav">
+            <ul>
+                <li>
+                    <a href="#">Home</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
         <div class="contactBanner"></div>
         <h2>Contact Us</h2>    
     </header>
