--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
             </div>
         </div>
     </header>
+    <nav class="mobileNav">
+        <ul>
+            <li>
+                <a href="#">Home</a>
+            </li>
+            <li>
+                <a href="#">Blog</a>
+            </li>
+            <li>
+                <a href="#">Contact</a>
+            </li>
+        </ul>
+    </nav>
     <!-- end of header section -->
 
     <!-- beginning of main section -->
