--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/cdc49ed55f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -100,8 +101,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
@@ -111,8 +114,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
@@ -122,8 +127,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
@@ -133,8 +140,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
@@ -144,8 +153,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
@@ -155,8 +166,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                     <li class="hide">
                         <div class="imageContainer">
@@ -166,8 +179,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                     <li class="hide">
                         <div class="imageContainer">
@@ -177,8 +192,10 @@
                             <h3>Mix Vegetables</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>                                
-                            <button>Add to cart</button>
                         </div>
+                        <button class="plusIcon">
+                            <i class="fa-solid fa-plus"></i>
+                        </button>
                     </li>
                 </ul>
                 <div class="shopBtn">
