added shopping cart counter

--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                     <li class="navHover navHide">
                         <a href="./contact.html">Contact</a>
                     </li>
-                    <li>
+                    <li class="cart">
                         <img class="svg" src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
+                        <div class="cartItemNumber">0</div>
                     </li>
                 </ul>
                 <button class="hamburger">
