added shop buttons

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
@@ -116,7 +116,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
@@ -129,7 +129,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
@@ -142,7 +142,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
@@ -155,7 +155,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
@@ -168,7 +168,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
@@ -181,7 +181,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
@@ -194,7 +194,7 @@
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             <p class="price">$370 <span>$350</span></p>                                
                         </div>
-                        <button class="plusIcon">
+                        <button class="addToCartBtn">
                             <i class="fa-solid fa-plus"></i>
                         </button>
                     </li>
