--- a/index.html
+++ b/index.html
@@ -98,105 +98,169 @@
                         <div class="imageContainer">
                             <img src="./assets/product1.jpeg" alt="Assorted fresh organic vegetables.">
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
                             <img src="./assets/product2.jpeg" alt="Organic limes.">
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
                             <img src="./assets/product3.jpeg" alt="Organic green eggplant.">
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
                             <img src="./assets/product4.jpeg" alt="Organic zucchini.">
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
                             <img src="./assets/product5.jpeg" alt="Organic snap peas.">                            
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                     <li>
                         <div class="imageContainer">
                             <img src="./assets/product6.jpeg" alt="Organic green olives.">
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                     <li class="hide">
                         <div class="imageContainer">
                             <img src="./assets/product7.jpeg" alt="Organic green cabbage.">
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                     <li class="hide">
                         <div class="imageContainer">
                             <img src="./assets/product8.jpeg" alt="Organic Boston lettuce.">
                         </div>
-                        <div class="textContainer">
-                            <h3>Mix Vegetables</h3>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                            <p class="price">$370 <span>$350</span></p>                                
+                        <div class="infoContainer">
+                            <div class="textContainer">
+                                <h3>Mix Vegetables</h3>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                                <p class="price">$370 <span>$350</span></p>                                
+                            </div>
+                            <div class="shopButtons">
+                                <button>
+                                    <i class="fa-solid fa-minus"></i>
+                                </button>
+                                <p class="quantity">0</p>
+                                <button class="addToCartBtn">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button>
+                            </div>
                         </div>
-                        <button class="addToCartBtn">
-                            <i class="fa-solid fa-plus"></i>
-                        </button>
                     </li>
                 </ul>
                 <div class="shopBtn">
