replaced FA plus/minus icons with reg text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/cdc49ed55f.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
@@ -105,13 +104,9 @@
                                 <p class="price">$370 <span>$350</span></p>
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
@@ -126,13 +121,9 @@
                                 <p class="price">$370 <span>$350</span></p>
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
@@ -147,13 +138,9 @@
                                 <p class="price">$370 <span>$350</span></p>
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
@@ -168,13 +155,9 @@
                                 <p class="price">$370 <span>$350</span></p>
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
@@ -189,13 +172,9 @@
                                 <p class="price">$370 <span>$350</span></p>
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
@@ -210,13 +189,9 @@
                                 <p class="price">$370 <span>$350</span></p>
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
@@ -231,13 +206,9 @@
                                 <p class="price">$370 <span>$350</span></p>
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
@@ -252,13 +223,9 @@
                                 <p class="price">$370 <span>$350</span></p>                                
                             </div>
                             <div class="shopButtons">
-                                <button>
-                                    <i class="fa-solid fa-minus"></i>
-                                </button>
+                                <button class="minus">-</button>
                                 <p class="quantity">0</p>
-                                <button class="addToCartBtn">
-                                    <i class="fa-solid fa-plus"></i>
-                                </button>
+                                <button class="plus">+</button>
                             </div>
                         </div>
                     </li>
