linked new js external files

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
     </footer>
     <!-- end of footer section -->
 
-    <script src="./script.js"></script>
+    <script src="./products.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
