added popup modal above header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
     <link href="./styles/style.css" rel="stylesheet">
 </head>
 <body>
+    <!-- popup modal -->
+    <div class="modalContainer">
+        <img src="./assets/logo.png" alt="Oreg logo.">
+        <h2>15% off</h2>
+        <p>Save on your first order and stay in the know with the latest products and weekly promotions.</p>
+        <form>
+            <label></label>
+            <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email">
+            <button type="submit">Unlock 15%</button>
+        </form>
+        <p>While we'll be say to see you go, you can unscribe anytime.</p>
+        <div class="modalLinks">
+            <a href="#">Terms & Conditions</a>
+            <a href="#">Privacy Policy</a>
+        </div>
+    </div>
     <!-- beginning of header section -->
     <header>
         <nav class="flexRow">
@@ -30,7 +46,7 @@
                         <a href="./contact.html">Contact</a>
                     </li>
                     <li class="cart">
-                        <img class="svg" src="./assets/icons/cart.svg" alt="Oreg shopping cart.">
+                        <img class="svg" src="./assets/icons/bag.png" alt="Oreg shopping cart.">
                         <div class="cartItemNumber">0</div>
                     </li>
                 </ul>
