updated popup modal code

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
     <!-- popup modal -->
     <div class="modalContainer">
+        <i class="fa-solid fa-xmark modalClose"></i>
         <img src="./assets/logo.png" alt="Oreg logo.">
         <h2>15% off</h2>
         <p>Save on your first order and stay in the know with the latest products and weekly promotions.</p>
         <form>
-            <label></label>
+            <label for="modalEmail"></label>
             <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email">
             <button type="submit">Unlock 15%</button>
         </form>
