--- a/index.html
+++ b/index.html
@@ -13,20 +13,22 @@
 </head>
 <body>
     <!-- popup modal -->
-    <div class="modalContainer">
-        <i class="fa-solid fa-xmark modalClose"></i>
-        <img src="./assets/logo.png" alt="Oreg logo.">
-        <h2>15% off</h2>
-        <p>Save on your first order and stay in the know with the latest products and weekly promotions.</p>
-        <form>
-            <label for="modalEmail"></label>
-            <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email">
-            <button type="submit">Unlock 15%</button>
-        </form>
-        <p>While we'll be say to see you go, you can unscribe anytime.</p>
-        <div class="modalLinks">
-            <a href="#">Terms & Conditions</a>
-            <a href="#">Privacy Policy</a>
+    <div class="modalOverlay">
+        <div class="modalContainer">
+            <i class="fa-solid fa-xmark closeModal"></i>
+            <img src="./assets/logo.png" alt="Oreg logo.">
+            <h2>15% off</h2>
+            <p>Save on your first order and stay in the know with the latest products and weekly promotions.</p>
+            <form>
+                <label for="modalEmail"></label>
+                <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email">
+                <button type="submit" class="modalBtn">Unlock 15%</button>
+            </form>
+            <p>While we'll be say to see you go, you can unscribe anytime.</p>
+            <div class="modalLinks">
+                <a href="#">Terms & Conditions</a>
+                <a href="#">Privacy Policy</a>
+            </div>
         </div>
     </div>
     <!-- beginning of header section -->
