added overlay container for popup modal

--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <body>
     <!-- popup modal -->
     <div class="modalOverlay">
-        <div class="modalContainer">
+        <div class="modalContainer wrapper">
             <i class="fa-solid fa-xmark closeModal"></i>
-            <img src="./assets/logo.png" alt="Oreg logo.">
+            <img class="logo" src="./assets/logo.png" alt="Oreg logo.">
             <h2>15% off</h2>
             <p>Save on your first order and stay in the know with the latest products and weekly promotions.</p>
             <form>
                 <label for="modalEmail"></label>
-                <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email">
+                <input type="text" id="modalEmail" name="modalEmail" placeholder="Enter your email...">
                 <button type="submit" class="modalBtn">Unlock 15%</button>
             </form>
-            <p>While we'll be say to see you go, you can unscribe anytime.</p>
+            <p class="disclaimer">*Don't worry, you can unsubcribe anytime.</p>
             <div class="modalLinks">
                 <a href="#">Terms & Conditions</a>
                 <a href="#">Privacy Policy</a>
