--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <title>Organic | Juno College Project One</title>
-    <link href="./styles/style.css" rel="stylesheet">
+    <link href="../styles/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- popup modal -->
@@ -85,12 +85,26 @@
         </ul>
     </nav>
     <div class="reviewCart">
-        <p class="yourCart">Your Cart</p>
-        <ul class="orderItems"></ul>
-        <div class="subTotal"></div>
-        <div class="tax"></div>
-        <div class="finalTotal"></div>
-        <button class="checkoutBtn">Go to Checkout</button>
+        <div class="cartTop">
+            <p class="yourCart">Your Cart</p>
+            <div class="cartMessages">
+                <p class="noItemsInCart">There are no items in your cart.</p>
+                <a href="#shop" class="continueShopping">Continue Shopping</a>
+            </div>
+            <ul class="orderItems"></ul>
+        </div>
+        <div class="moneyTings">
+            <div class="subTotal">
+                <p>Sub-Total (<span class="totalItems">0</span> items): $<span class="subTotalPrice">0.00</span></p>
+            </div>
+            <div class="tax">
+                <p>Total Tax (HST 13%): $<span class="totalTaxPrice">0.00</span></p>
+            </div>
+            <div class="finalTotal">
+                <p>Final Total: $<span class="finalTotalPrice">0.00</span></p>
+            </div>
+            <button class="checkoutBtn">Go to Checkout</button>
+        </div>
     </div>
     <!-- end of header section -->
 
