added close icon to cart

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
     </nav>
     <div class="reviewCart">
         <div class="cartTop">
+            <i class="fa-solid fa-xmark closeCart"></i>
             <p class="yourCart">Your Cart</p>
             <div class="cartMessages">
                 <p class="noItemsInCart">There are no items in your cart.</p>
