added wishlist icon to top nav

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                     <li class="navHover navHide">
                         <a href="./contact.html">Contact</a>
                     </li>
+                    <li class="wishList">
+                        <i class="fa-regular fa-heart wishListIcon"></i>
+                    </li>
                     <li class="cart">
                         <img class="svg" src="./assets/icons/bag.png" alt="Oreg shopping cart.">
                         <div class="cartItemNumber">0</div>
