linked mobile nav links

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
     <nav class="mobileNav">
         <ul>
             <li>
-                <a href="#">Home</a>
+                <a href="./index.html">Home</a>
             </li>
             <li>
-                <a href="#">Blog</a>
+                <a href="#blog">Blog</a>
             </li>
             <li>
                 <a href="./contact.html">Contact</a>
