added reuseable classes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- popup modal -->
     <div class="modalOverlay">
-        <div class="modalContainer wrapper">
+        <div class="modalContainer wrapper flexColumn">
             <i class="fa-solid fa-xmark closeModal"></i>
             <img class="logo" src="./assets/logo.png" alt="Oreg logo.">
             <h2>15% off</h2>
@@ -87,7 +87,7 @@
             </li>
         </ul>
     </nav>
-    <div class="reviewCart">
+    <div class="reviewCart flexColumn">
         <div class="cartTop">
             <i class="fa-solid fa-xmark closeCart"></i>
             <p class="yourCart">Your Cart</p>
